# newDataDog

./: .env.example  .gitignore  CLAUDE.md  README.md  run_demo.sh
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py  models.py
backend/app/adapters/: __init__.py  base.py  meta.py  nimble.py  x.py
backend/app/agents/x_agent/: __init__.py  config.py  context.py  monitor.py  oembed.py  poster.py  responder.py  runner.py  store.py
backend/app/api/: llmo_routes.py  routes.py  scores_route.py  webhooks.py  websocket.py  x_agent_route.py
backend/app/core/: ch.py  db.py  llm.py  metrics.py  queue.py  realtime.py
backend/app/destinations/: __init__.py  luminai.py  slack.py
backend/app/pipeline/: act.py  brand_scoring.py  cluster.py  llmo.py  llmo_scoring.py  monitor.py  score.py  score_formula.py
backend/app/workers/: cron.py  pipeline_worker.py
backend/migrations/: 001_clickhouse.sql  002_postgres.sql  003_llmo.sql  004_postgres_llmo.sql
backend/scripts/: apply_migrations.py  demo_inject.py  run_x_agent.py  seed_demo.py  seed_llmo.py  seed_reddit_feed.py  setup_x_stream.py  verify_env.py  x_reply.py  x_stream_consumer.py
backend/tests/: test_adapters.py  test_llm_prompts.py  test_llmo_scoring.py  test_scoring.py  test_webhooks.py
frontend/: .env.local.example  mock-server.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/components/: ActionCard.tsx  ClusterCard.tsx  FeedSidebar.tsx  GroundTruthDriftCard.tsx  LLMVisibilityGrid.tsx  LiveDot.tsx  PageState.tsx  PostCard.tsx  (+11 more)
(+23 files in other folders)
