[project]
name = "pulse-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "httpx==0.26.0",
    "asyncpg==0.29.0",
    "pgvector==0.2.5",
    "clickhouse-connect==0.7.0",
    "redis==5.0.1",
    "arq==0.25.0",
    "google-genai==0.3.0",
    "ddtrace==2.6.0",
    "datadog==0.49.1",
    "python-dotenv==1.0.0",
]

[project.optional-dependencies]
dev = ["pytest==8.0.0", "pytest-asyncio==0.23.4"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
